--- a/docs/01. Docker.md
+++ b/docs/01. Docker.md
@@ -13,5 +13,7 @@ Agar siz docker asosida qurilgan loyihani bir serverdan ikkinchisiga olib o'tmoq
 
 Xo'sh unda docker konteynerlar ichida nega bunday muammo bo'lmaydi? Docker konteynerlarda bunday muammo bo'lmasligini sababi, ushbu konteynerlar operatsion tizimlarni ham birga olib yuradi, konteyner operatsion tizimi, kompyuter operatsion tizimidan izolyatsiya qilingan bo'ladi. Shuning uchun konteynerlarni tashqi operatsion tizim qiziqtirmaydi, Sizga kerakli visitalarni konteynerga to'g'ri versiyasi o'rnatsangiz yetarli, xatto boshqa konteynerga boshqa versiyalarni o'rnatsangiz ham muammosiz ishlayveradi.
 
+Undan tashqari docker dasturiy ta'minotni yaratish va foydalanuvchiga yetkazib berish vaqtini sezilarli darajada qisqartiradi. 
+
 
 
